@@ -2,6 +2,7 @@ v4.16 ??? May 2014
   - Added support for the 'no_receiver_check' argument to connect() in PyQt
     v4.11.
   - Added the --static-root option to configure.py.
+  - Added the --use-qmake option to configure.py.
   - Bug fixes.
 
 v4.15.5 14th March 2014
